--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,5 +1,4 @@
 @import "fonts";
-@import "colors";
 @import "classes";
 
 html{
@@ -55,6 +54,6 @@ body{
     h1, h2, h3, h4, a, p,
     input[type="button"],
     button{
-        @extend .notSelectable;
+        user-select: none;
     }
 }
