--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,6 +1,3 @@
-@import 'mixin';
-@import 'classes';
-
 .App{
     width: 100%;
     height: 100%;
@@ -51,11 +48,20 @@
                 max-height: 680px;
                 position: fixed;
                 top: 53%;
-                @include transform(0, -50%);
+                transform: translate(0, -50%);
             }
         }
     }
+}
 
+//dark mode:
+.App.darkMode{
+    background-color: #000b23;
+    > .window{
+        > .rightSide{
+            background-color: #000b23;
+        }
+    }
 }
 
 //responsive design:
