--- a/src/stylesheets/_App.mobile.scss
+++ b/src/stylesheets/_App.mobile.scss
@@ -34,6 +34,16 @@
                             > .inputsContainer{
                                 opacity: 1;
                                 transition: opacity 200ms linear;
+                                .RangeInput{
+                                    .textInput{
+                                        font-size: 3rem;
+                                    }
+                                }
+                                .SelectInput{
+                                    .select{
+                                        font-size: 2.6rem;
+                                    }
+                                }
                             }
                             > .calcButtonWrapper{
                                 display: block;
